--- a/Game2048/app/src/main/res/drawable/border_base4.xml
+++ b/Game2048/app/src/main/res/drawable/border_base4.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/brown_dark"/>
+    <solid android:color="@color/base4"/>
+    <corners android:radius="16dp"/>
     <stroke
         android:width="3dp"
         android:color="@color/black"/>
